--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- Profile Picture Section -->
         <div>
             <!-- Replaced the static image with an animated GIF -->
-            <img src="https://i.pinimg.com/originals/3a/06/61/3a066133919b5b211244e78c97327a34.gif" alt="Alex Doe's pixelated animation" class="w-32 h-32 mx-auto border-4 border-[#4F4F4F] object-cover">
+            <img src="logo.jpg" alt="Alex Doe's pixelated animation" class="w-32 h-32 mx-auto border-4 border-[#4F4F4F] object-cover">
         </div>
 
         <!-- Name and Title Section -->
@@ -117,3 +117,4 @@
     </script>
 </body>
 </html>
+
